<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Layout02"
    android:background="#ffc9242a"
    android:rowCount="11"
    android:columnCount="6">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/LblNome"
        android:id="@+id/LblNome"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/LblEmail"
        android:id="@+id/LblEmail"
        android:layout_marginLeft="20dp"
        android:layout_row="2"
        android:layout_column="1" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/LblTel"
        android:id="@+id/LblTel"
        android:layout_marginLeft="20dp"
        android:layout_row="3"
        android:layout_column="1" />


    <Spinner
        android:id="@+id/ListEstado"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_marginLeft="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Lblsenha"
        android:id="@+id/LblSenha"
        android:layout_marginLeft="20dp"
        android:layout_row="5"
        android:layout_column="1" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/LblConfSenha"
        android:id="@+id/LblConfSenha"
        android:layout_marginLeft="20dp"
        android:layout_row="6"
        android:layout_column="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Salvar"
        android:id="@+id/btSalvar"
        android:layout_row="10"
        android:layout_column="2"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="0dp" />
</GridLayout>