<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:id="@+id/LayoutLogged"

    android:background="#ffc9242a"
    android:clickable="false"
    android:rowCount="9"
    android:columnCount="6">




    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imageView"
        android:layout_column="0"
        android:src="@drawable/logo"

        android:layout_marginTop="27dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/editLogin"
        android:layout_alignStart="@+id/editLogin" />

    <EditText
        android:layout_width="200dp"

        android:layout_height="wrap_content"
        android:id="@+id/editLogin"

        android:layout_gravity="center"
        android:editable="true"
        android:elegantTextHeight="false"
        android:background="#ffffffff"
        android:maxLines="1"
        android:maxLength="200"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <EditText
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:inputType="textPassword"
       android:ems="10"
       android:maxLines="1"
       android:maxLength="40"
       android:id="@+id/editSenha"
       android:background="#ffffffff"


        android:layout_below="@+id/textView3"
        android:layout_alignRight="@+id/editLogin"
        android:layout_alignEnd="@+id/editLogin"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <Button
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/bt_login"
       android:id="@+id/btLogin"
        android:layout_below="@+id/editSenha"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />
   <Button
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/bt_cadastrar"
       android:id="@+id/bt_cadastrar"
       android:layout_alignTop="@+id/btLogin"
       android:layout_alignRight="@+id/imageView"
       android:layout_alignEnd="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/LblEmail"
        android:id="@+id/textView2"
        android:layout_below="@+id/imageView"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Lblsenha"
        android:id="@+id/textView3"
        android:layout_below="@+id/editLogin"
        android:layout_alignLeft="@+id/editLogin"
        android:layout_alignStart="@+id/editLogin" />
</RelativeLayout>
